--- a/index.html
+++ b/index.html
@@ -3,9 +3,15 @@
 <body>
 <p> This section is for starting out oop</p>
 
-  <a href="">Example 1</a>
+  <a href="example1.js">Example 1</a>
   <br>
-<a href="">Example 2</a>
+  <a href="example2.js">Example 2</a>
+  <br>
+  <a href="example3.js">Example 3</a>
+  <br>
+  <a href="example4.js">Example 4</a>
+  <br>
+  <a href="example5.js">Example 5</a>
 
 </body>
 </html>
