--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body>
 <p> This section is for starting out oop</p>
 <br>
-  <a href="example1.js">Example 1</a>
+  <a href="example1.html">Example 1</a>
   <br>
   <a href="example2.js">Example 2</a>
   <br>
