--- a/html/example1.html
+++ b/html/example1.html
@@ -1,1 +1,11 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>JavaScript Example</title>
+</head>
+<body>
+    <h1>Check the Console</h1>
+    <script src="example1.js" defer></script>
+</body>
+</html>
