--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <body>
 <p> This section is for starting out oop</p>
 <br>
-  <a href="example1.html">Example 1</a>
+  <a href="html/example1.html">Example 1</a>
   <br>
-  <a href="example2.js">Example 2</a>
+  <a href="html/example2.html">Example 2</a>
   <br>
-  <a href="example3.js">Example 3</a>
+  <a href="html/example3.html">Example 3</a>
   <br>
-  <a href="example4.js">Example 4</a>
+  <a href="html/example4.html">Example 4</a>
   <br>
-  <a href="example5.js">Example 5</a>
+  <a href="html/example5.html">Example 5</a>
 
 </body>
 </html>
