--- a/html/example1.html
+++ b/html/example1.html
@@ -6,6 +6,6 @@
 </head>
 <body>
     <h1>Check the Console</h1>
-    <script src="example1.js" defer></script>
+    <script src="../script/example1.js" defer></script>
 </body>
 </html>
