--- a/html/example3.html
+++ b/html/example3.html
@@ -1,1 +1,14 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Example 3</title>
+    <script src="../script/example3.js" defer></script>
+</head>
+<body>
+    <h1>Check the Console for Output</h1>
+    <p>Open the browser console (F12 > Console) to see the bike details.</p>
+</body>
+</html>
 
