--- a/html/example4.html
+++ b/html/example4.html
@@ -1,1 +1,13 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Example 4</title>
+    <script src="../script/example4.js" defer></script>
+</head>
+<body>
+    <h1>Check the Console for Output</h1>
+    <p>Open the browser console (F12 > Console) to see the student greeting.</p>
+</body>
+</html>
