--- a/html/example5.html
+++ b/html/example5.html
@@ -1,1 +1,14 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Example 5</title>
+    <script src="../script/example5.js" defer></script>
+</head>
+<body>
+    <h1>Getter & Setter Properties Example</h1>
+    <p>Open the browser console (F12 > Console) to see the output.</p>
+</body>
+</html>
 
